expanded on logs and socket is fully supported now

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,14 @@
 <head>
 	<title>Vita List</title>
 	<!-- Bootsrap -->
-	<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-	<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
-	<script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="vendors/bootstrap/dist/css/bootstrap.min.css">
+	<script type="text/javascript" src="vendors/jquery/dist/jquery.min.js"></script>
+	<script type="text/javascript" src="vendors/bootstrap/dist/js/bootstrap.min.js"></script>
 	<!-- Bootsrap -->
 	<!-- D3 -->
-	<script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
-	<script type="text/javascript" src="bower_components/d3-jetpack/d3-jetpack.js"></script>
+	<script type="text/javascript" src="vendors/d3/d3.min.js"></script>
+	<script type="text/javascript" src="vendors/d3-jetpack/d3-jetpack.js"></script>
+	<script type="text/javascript" src="libs/socket.io.js"></script>
 	<!-- D3 -->
 	<!-- Mine -->
 	<link rel="stylesheet" type="text/css" href="style.css">
