can delete shit

--- a/public/index.html
+++ b/public/index.html
@@ -37,8 +37,9 @@
 					<button id="dn-btn" class="edit-team btn-lg btn btn-default" type="button" title="Move down!"> 
 						<span class="glyphicon glyphicon-triangle-bottom"></span>
 					</button>
-					<!-- <button id="done-btn" class="edit-team btn-lg btn btn-primary" type="button" title="Mark done/undone.">
-					</button> -->
+					<button id="remove-btn" class="edit-team btn-lg btn btn-danger" type="button" title="Delete activity">
+						<span class="glyphicon glyphicon-trash"></span>
+					</button>
 					<button id="add-btn" class="btn-lg btn btn-primary" type="button" title="Add activity!">
 						<span class="glyphicon glyphicon-plus"></span>
 					</button>
