--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,15 @@
 			</div>
 		</div>
 	</div>
-
+	
+	<div id="rankTodoModal" class="modal">
+		<div class="modal-content">
+			<span class="close">&times;</span>
+			<p>Some text in the Modal..</p>
+		</div>
+		
+	</div>
+	
 	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
