--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,9 @@
 	<!-- Mine -->
 </head>
 <body>
-	<div class="container" style="padding-top: 1%">
+	<div style="padding: 1%">
 		<div class="row">
-			<div class="col-md-1 col-lg-1 col-xs-1 col-sm-1">
-			</div>
-			<div class="input-group col-md-10 col-lg-10 col-xs-10 col-sm-10">
+			<div class="input-group col-md-offset-1 col-lg-offset-1 col-sm-offset-half col-xs-offset-half col-md-10 col-lg-10 col-xs-11 col-sm-11">
 				<span class="input-group-btn">
 					<button id="refresh-btn" class="btn btn-danger btn-lg" type="button" title="Reset the Input Bar">
 						<span class="glyphicon glyphicon-refresh"></span>
