--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 	<!-- D3 -->
 	<script type="text/javascript" src="vendors/d3/d3.min.js"></script>
 	<script type="text/javascript" src="vendors/d3-jetpack/d3-jetpack.js"></script>
+	<script type="text/javascript" src="vendors/moment/moment.js"></script>
 	<script type="text/javascript" src="libs/socket.io.js"></script>
 	<!-- D3 -->
 	<!-- Mine -->
